--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Book Showcase</title>
     <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="../node_modules/bootstrap-icons/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+
     <style type="text/css">
         body {
             font-family: Arial, sans-serif;
